--- a/test.ejs
+++ b/test.ejs
@@ -3,7 +3,7 @@
   <body>
     <div class="flex h-screen justify-center items-center">
       <div class="text-center bg-blue-400 p-10">
-        <h1 class="text-3xl font-bold font-ginto">coding is cute</h1>
+        <h1 class="text-3xl font-bold font-ginto"><%= name %> is cute</h1>
       </div>
     </div>
   </body>
