--- a/test.ejs
+++ b/test.ejs
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <div class="flex h-screen justify-center items-center">
-      <div class="text-center bg-blue-400 p-10">
-        <h1 class="text-3xl font-bold font-ginto"><%= name %> is cute</h1>
+  <body class="p-2">
+    <div class="z-10 text-white">
+      <div class="flex mb-2">
+        <h1 class="font-bold text-5xl font-ginto flex-none">
+          Happy Birthday Discord!
+        </h1>
+        <h2 class="font-medium text-1xl font-ginto">
+          Thank you for building the home for community, and other stuff lol idk
+          ill make this later :)
+        </h2>
+      </div>
+      <div style="font-size: 1rem; line-height: 1rem">
+        <div class="flex flex-wrap">
+          <% for (const user of users) { %>
+          <div class="mr-1"><%= user.username %>#<%= user.discriminator %></div>
+          <% } %>
+        </div>
       </div>
     </div>
+    <div class="fixed right-0 bottom-0 -z-10"><%- bg %></div>
   </body>
+  <style>
+    html {
+      background: linear-gradient(94.34deg, #5521ff 0.84%, #6055ee 51.62%);
+    }
+  </style>
 </html>
