refactor: move image generation logic to a class

--- a/template.ejs
+++ b/template.ejs
@@ -4,8 +4,12 @@
     <div class="z-10 text-white">
       <div class="mb-2">
         <h1 class="font-bold text-5xl font-ginto flex-none">
-          Happy 7th Birthday, Discord!
+          aaa
         </h1>
+
+        <!-- <h1 class="font-bold text-5xl font-ginto flex-none"> -->
+        <!--   Happy 7th Birthday, Discord! -->
+        <!-- </h1> -->
       </div>
       <div class="flex">
         <div
@@ -22,10 +26,14 @@
         </div>
         <div>
           <h2 class="font-medium text-1xl font-ginto ml-4 leading-snug">
-            Thank you for building the home for community, and other stuff lol
-            idk ill make this later :)<br />
-            ~ The Discord Community
+            aaaaaa
           </h2>
+
+          <!-- <h2 class="font-medium text-1xl font-ginto ml-4 leading-snug"> -->
+          <!--   Thank you for building the home for community, and other stuff lol -->
+          <!--   idk ill make this later :)<br /> -->
+          <!--   ~ The Discord Community -->
+          <!-- </h2> -->
         </div>
       </div>
     </div>
