--- a/template.ejs
+++ b/template.ejs
@@ -4,12 +4,8 @@
     <div class="z-10 text-white">
       <div class="mb-2">
         <h1 class="font-bold text-5xl font-ginto flex-none">
-          aaa
+          Happy 7th Birthday, Discord!
         </h1>
-
-        <!-- <h1 class="font-bold text-5xl font-ginto flex-none"> -->
-        <!--   Happy 7th Birthday, Discord! -->
-        <!-- </h1> -->
       </div>
       <div class="flex">
         <div
@@ -26,14 +22,10 @@
         </div>
         <div>
           <h2 class="font-medium text-1xl font-ginto ml-4 leading-snug">
-            aaaaaa
+            Thank you for building the home for community, and other stuff lol
+            idk ill make this later :)<br />
+            ~ The Discord Community
           </h2>
-
-          <!-- <h2 class="font-medium text-1xl font-ginto ml-4 leading-snug"> -->
-          <!--   Thank you for building the home for community, and other stuff lol -->
-          <!--   idk ill make this later :)<br /> -->
-          <!--   ~ The Discord Community -->
-          <!-- </h2> -->
         </div>
       </div>
     </div>
