better banner design

--- a/template.ejs
+++ b/template.ejs
@@ -33,7 +33,7 @@
   </body>
   <style>
     html {
-      background: linear-gradient(94.34deg, #5521ff 0.84%, #6055ee 51.62%);
+      background: linear-gradient(180deg, #7269ff 0%, #b2adff 196.83%);
     }
   </style>
 </html>
