--- a/template.ejs
+++ b/template.ejs
@@ -21,7 +21,7 @@
           </p>
         </div>
         <div>
-          <h2 class="font-medium text-1xl font-ginto ml-4 leading-snug">
+          <h2 class="font-medium text-1xl font-whitney ml-4 leading-snug">
             Thank you for building the home for community, and other stuff lol
             idk ill make this later :)<br />
             ~ The Discord Community
@@ -34,6 +34,9 @@
   <style>
     html {
       background: linear-gradient(180deg, #7269ff 0%, #b2adff 196.83%);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
     }
   </style>
 </html>
