--- a/template.ejs
+++ b/template.ejs
@@ -2,16 +2,16 @@
 <html>
   <body class="p-6">
     <div class="z-10 text-white">
-      <div class="mb-2">
+      <div class="mb-1">
         <h1 class="font-bold text-5xl font-ginto flex-none">
           Happy 7th Birthday, Discord!
         </h1>
+        <h2 class="font-bold text-xl font-whitney mt-1 leading-snug">
+          Thank you for building the home for community, and so much more.
+        </h2>
       </div>
-      <div class="flex">
-        <div
-          style="font-size: 0.7rem; line-height: 0.95rem"
-          class="w-3/4 flex-none"
-        >
+      <div class="">
+        <div style="font-size: 0.5rem; line-height: 0.75rem" class="flex-none">
           <p class="font-ginto text-justify">
             <span>
               <% for (const user of users) { %>
@@ -19,13 +19,6 @@
               user.discriminator %> <% } %>
             </span>
           </p>
-        </div>
-        <div>
-          <h2 class="font-medium text-1xl font-whitney ml-4 leading-snug">
-            Thank you for building the home for community, and other stuff lol
-            idk ill make this later :)<br />
-            ~ The Discord Community
-          </h2>
         </div>
       </div>
     </div>
