make image larger & sharper

--- a/template.ejs
+++ b/template.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <body class="p-6">
+  <body class="p-12">
     <div class="z-10 text-white">
       <div class="mb-1">
-        <h1 class="font-bold text-5xl font-ginto flex-none">
+        <h1 class="font-bold text-8xl font-ginto flex-none">
           Happy 7th Birthday, Discord!
         </h1>
-        <h2 class="font-bold text-xl font-whitney mt-1 leading-snug">
+        <h2 class="font-bold text-5xl font-whitney mt-2 leading-snug">
           Thank you for building the home for community, and so much more.
         </h2>
       </div>
       <div class="">
-        <div style="font-size: 0.25rem; line-height: 0.23rem" class="flex-none">
+        <div style="font-size: 0.5rem; line-height: 0.5rem" class="flex-none">
           <p class="font-ginto text-justify">
             <span>
               <% for (const user of users) { %>
