make banner bigger

--- a/template.ejs
+++ b/template.ejs
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <body class="p-12">
+  <body class="p-16">
     <div class="z-10 text-white">
       <div class="mb-1">
-        <h1 class="font-bold text-8xl font-ginto flex-none">
+        <h1
+          class="font-bold font-ginto flex-none"
+          style="font-size: 9rem; line-height: 1"
+        >
           Happy 7th Birthday, Discord!
         </h1>
-        <h2 class="font-bold text-5xl font-whitney mt-2 leading-snug">
+        <h2 class="font-bold text-7xl font-whitney mt-2 leading-snug">
           Thank you for building the home for community, and so much more.
         </h2>
       </div>
       <div class="">
-        <div
-          style="font-size: 0.335rem; line-height: 0.335rem"
-          class="flex-none"
-        >
+        <div style="font-size: 0.6rem; line-height: 0.55rem" class="flex-none">
           <p class="font-ginto text-justify">
             <span>
-              <% for (const user of users.slice(0, 12000)) { %>
+              <% for (const user of users.slice(0, 9500)) { %>
               <span class="user">
                 <span class="font-medium"><%= user.username %></span
                 >#<%=user.discriminator %>
